fix modals not padded on mobile

--- a/www/less/main/components/modals.less
+++ b/www/less/main/components/modals.less
@@ -10,8 +10,8 @@
 		display: block;
 		position: relative;
 		@media (max-width: @screen-sm-max) {
-			margin-top: 2ex;
-			margin-bottom: 8ex;
+			padding-top: 2ex;
+			padding-bottom: 8ex;
 		}
 	}
 	.modal-backdrop {
